add API and routes to support job cancelling
